--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,35 @@
-name: Build & Deploy via Docker (Self-hosted)
+# name: Build & Deploy via Docker (Self-hosted)
 
-on:
-  push:
-    branches: [main]
+# on:
+#   push:
+#     branches: [main]
 
-jobs:
-  deploy:
-    runs-on: self-hosted
+# jobs:
+#   deploy:
+#     runs-on: self-hosted
 
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout repo
+#         uses: actions/checkout@v3
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
+#       - name: Set up Docker
+#         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
-        run: |
-          docker build \
-            --build-arg SITE_URL=${{ secrets.SITE_URL }} \
-            -t nextjs-app:latest .
+#       - name: Build Docker image
+#         run: |
+#           docker build \
+#             --build-arg SITE_URL=${{ secrets.SITE_URL }} \
+#             -t nextjs-app:latest .
 
-      - name: Stop existing container (if any)
-        run: |
-          docker stop nextjs-app || true
-          docker rm nextjs-app || true
+#       - name: Stop existing container (if any)
+#         run: |
+#           docker stop nextjs-app || true
+#           docker rm nextjs-app || true
 
-      - name: Run new container
-        run: |
-          docker run -d \
-            --name nextjs-app \
-            -p 3000:3000 \
-            -e SITE_URL=${{ secrets.SITE_URL }} \
-            nextjs-app:latest
+#       - name: Run new container
+#         run: |
+#           docker run -d \
+#             --name nextjs-app \
+#             -p 3000:3000 \
+#             -e SITE_URL=${{ secrets.SITE_URL }} \
+#             nextjs-app:latest
