--- a/.github/workflows/deploynodocker.yml
+++ b/.github/workflows/deploynodocker.yml
@@ -19,21 +19,19 @@ jobs:
         with:
           node-version: 22
 
-      - name: Install Dependencies
-        run: |
-          npm install -g pnpm
-          pnpm install
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps
 
       - name: Build the app
-        run: pnpm build
+        run: npm run build
 
-      - name: Deploy to EC2
+      - name: Deploy files to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: ".next,package.json,ecosystem.config.js,public"
+          source: ".next,package.json,public"
           target: "/home/ubuntu/next-app"
 
       - name: SSH and restart app with PM2
@@ -43,7 +41,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            export PATH=$HOME/.nvm/versions/node/v22.*/bin:$PATH
             cd next-app
-            npm install -g pnpm
-            pnpm install --prod
+            npm install --legacy-peer-deps --production
             pm2 start npm --name "next-app" -- start || pm2 restart "next-app"
