--- a/.github/workflows/deploynodocker.yml
+++ b/.github/workflows/deploynodocker.yml
@@ -32,7 +32,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           source: ".next,package.json,package-lock.json,public,ecosystem.config.js"
-          target: "/home/ubuntu/next-app"
+          target: "/home/ubuntu/actions-runner/_work/testaws/testaws"
 
       - name: SSH and restart app with PM2
         uses: appleboy/ssh-action@v1.0.3
@@ -45,6 +45,6 @@ jobs:
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
             [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
             nvm use 22
-            cd next-app
+            cd ~/actions-runner/_work/testaws/testaws
             npm install --legacy-peer-deps --production
-            pm2 describe next-app > /dev/null 2>&1 && pm2 restart next-app || pm2 start npm --name "next-app" -- start
+            pm2 describe next-app > /dev/null 2>&1 && pm2 restart next-app || pm2 start ecosystem.config.js
